Improve the writing

--- a/outputs/paper/paper.qmd
+++ b/outputs/paper/paper.qmd
@@ -13,7 +13,7 @@ format:
         \newcommand{\elandscape}{\end{landscape}}
     documentclass: article
     geometry: margin = 1in
-    abstract: "Immigration and asylum-seeking are common topics of discussion in our globalized world, about which many Westerners hold opinions due to certain personal justifications. This paper replicates data analysis of the perceptions of non-immigrant German males towards refugees in municipalities where males overpopulate females. We apply secondary research regarding Canadian rates of immigration and gender imbalances in Alberta and raise concerns regarding the possibly generalizable nature of the findings in Germany. As this issue specifically affects minority groups experiencing prejudice, we place great emphasis on the weight of this discussion and call for future investigations of this field to inform policies and initiatives to address racism and hate crimes."
+    abstract: "Over time, many scholars have attempted to investigate the impact of terrorism on citizens' political beliefs. This paper replicates data analysis of this body of literature, examining around 325 studies conducted between 1985 and 2020, which results affirm that terrorism is correlated—albeit to a small but meaningful extent—with increased hostility towards outgroups, tendencies towards political conservatism, and the occurrence of rally-'round-the-flag effects. Overall, this meta-analysis consolidates existing evidence, discerns consistent findings across different situations, and identifies significant areas of knowledge deficiency. However, since the effects of terrorism vary widely, with studies focusing on Islamist violence, carried out in the United States or Israel, we raise concerns regarding the possibly generalizable nature of the findings.  It is essential to place great emphasis on the weight of this discussion and call for future investigations of the reaction of political attitudes on terrorism."
     number-sections: true
 output: 
   bookdown::pdf_document2
@@ -57,11 +57,9 @@ library(kableExtra)
 
 # Introduction
 
-In Canada, hate crimes based on race and ethnicity increased by 80% in 2020, with the highest number of incidents targeting black individuals, followed by east and southeast Asians, indigenous individuals, and the lowest number of victims being South Asian individuals [@moreau_wang_2022]. Seeing that Canada is one of the most diverse countries in the world, welcoming 405,999 permanent immigrants in 2021 [@government_of_canada_2022] and 130,125 refugees in 2020 [@macrotrends], these statistics concerning the increase of hate crimes pose a real and visceral threat to a large proportion of Canadian residents.
+Terrorists, distinct from ordinary criminals, are perceived to advocate for a political cause, often resorting to violent tactics to garner public attention and influence public opinion. Hence, within political science, there's a prevalent belief that the effectiveness of terrorism hinges on assumptions regarding its impact on public sentiment. Essentially, public opinion is deemed crucial in understanding the dynamics of terrorism. Yet, the extent and manner in which terrorism affects "ordinary citizens" remain ambiguous. Are citizens more inclined towards supporting authoritarian leaders in times of terror? Are they willing to sacrifice civil liberties and democratic values for enhanced security post-attack? Additionally, what or who exactly constitutes "terrorism"?
 
-There are many factors that contribute to the increase in hate crimes in Canada. However, with the rise of far-right discourse in the United States, anti-immigrant and anti-refugee rhetoric is becoming more prevalent in Canada. These negative attitudes and actions towards immigrants, refugees, and marginalized individuals can be the result of various structural and personal factors, including increased competition in the job and housing markets, resource scarcity, misguided beliefs about crime rates, illness, welfare dependency, and fears of losing national identity. Despite this, one factor that has received little attention until recently is the impact of mate competition in dating and marriage markets on anti-refugee sentiments. A [-@main_paper] paper by Dancygier, Egami, Jamal, and Rischke published in the American Journal of Political Science delves into this potentially important and often-overlooked fusion of social science with ecology.
-
-In studying the opinions of German males living in municipalities with excess male populations, they find that a portion of non-immigrant German men hold the belief that refugees pose a threat to their ability to pursue German women [@main_paper]. The study population is primarily non-immigrant German males in highly male populated municipalities. The estimand which we intend to replicate is the effect of mate competition on anti-refugee sentiments. Their finding suggests that hate crimes increase where non-immigrant German men are disadvantaged in their local dating markets [@main_paper]. Using ecological evidence and originally curated survey data, the paper concludes that competition in dating and marriage markets where men outnumber women increases anti-refugee sentiments and violence [@main_paper].
+Since the tragic events of September 11, 2001 (9/11), a substantial body of literature has emerged addressing these inquiries, yielding varied conclusions. While some scholars express concern that public reactions to terrorism jeopardize democracy, others argue that such responses are limited or transient, and sometimes even absent. However, these studies often explore diverse outcomes, nations, and terrorist threats using a range of methodologies. Consequently, there's a lack of systematic scrutiny regarding how the public's response to terrorism has been studied, resulting in limited understanding of this field's key characteristics and how they influence conclusions.
 
 Our paper will follow a reproduction of Dancygier, Egami, Jamal, and Rischke's findings and apply a Canadian-facing lens to discuss its implications on local Canadian populations and increased anti-refugee/ immigrant sentiments and violence. Our paper seeks to replicate their two following research claims, (1) Non-immigrant German men who live in municipalities with excess male populations are more likely to perceive refugees as threats and (2) Non-immigrant German men who perceive mate competition are more likely to support violence as the only means to gain the attention of German politicians. Our reproduction was conducted using the statistical programming language R [@citeR]. To further enable our analysis we employed the use of the following packages: readr [@readr], here [@here], readstata13 [@readstata13], MASS [@MASS], sandwich [@sandwich], lmtest [@lmtest], dplyr [@dplyr], tidyverse [@tidyverse], jtools [@jtools], huxtable [@huxtable], list [@list], knitr [@knitr] and kableExtra [@kableExtra].
 
