--- a/outputs/paper/paper.qmd
+++ b/outputs/paper/paper.qmd
@@ -1,8 +1,8 @@
 ---
-title: "Harmful Anti-Foreign Sentiments based on Concern for Competition Should be Recognized and Addressed"
-author: "Jayden Jung, Finn Korol, Sofia Sellitto"
-thanks: "Code and data are available at: https://github.com/jj-andj/mate-comp-hate ; Replication on Social Science Reproduction platform available at: https://doi.org/10.48152/ssrp-qg85-cb34"
-date: "February 17, 2023"
+title: "Start with the literature: assessthe empirical evidence for the relationship between ter-rorism and political attitudes"
+author: "Bernice(Yixuan) Bao, Zheng(Zeb) Yang, Jingcheng Yang"
+thanks: "Code and data are available at: https://github.com/BerniceBao/Terrorism-Political-Attitude ; Replication on Social Science Reproduction platform available at: https://doi.org/10.48152/ssrp-qg85-cb34"
+date: "February 13, 2024"
 date-format: long
 format: 
   pdf: 
@@ -13,7 +13,7 @@ format:
         \newcommand{\elandscape}{\end{landscape}}
     documentclass: article
     geometry: margin = 1in
-    abstract: "Immigration and asylum-seeking are common topics of discussion in our globalized world, about which many Westerners hold opinions due to certain personal justifications. This paper replicates data analysis of the perceptions of non-immigrant German males towards refugees in municipalities where males overpopulate females. We apply secondary research regarding Canadian rates of immigration and gender imbalances in Alberta and raise concerns regarding the possibly generalizable nature of the findings in Germany. As this issue specifically affects minority groups experiencing prejudice, we place great emphasis on the weight of this discussion and call for future investigations of this field to inform policies and initiatives to address racism and hate crimes."
+    abstract: "Over time, many scholars have attempted to investigate the impact of terrorism on citizens' political beliefs. This paper replicates data analysis of this body of literature, examining around 325 studies conducted between 1985 and 2020, which results affirm that terrorism is correlated—albeit to a small but meaningful extent—with increased hostility towards outgroups, tendencies towards political conservatism, and the occurrence of rally-'round-the-flag effects. Overall, this meta-analysis consolidates existing evidence, discerns consistent findings across different situations, and identifies significant areas of knowledge deficiency. However, since the effects of terrorism vary widely, with studies focusing on Islamist violence, carried out in the United States or Israel, we raise concerns regarding the possibly generalizable nature of the findings.  It is essential to place great emphasis on the weight of this discussion and call for future investigations of the reaction of political attitudes on terrorism."
     number-sections: true
 output: 
   bookdown::pdf_document2
@@ -57,11 +57,9 @@ library(kableExtra)
 
 # Introduction
 
-In Canada, hate crimes based on race and ethnicity increased by 80% in 2020, with the highest number of incidents targeting black individuals, followed by east and southeast Asians, indigenous individuals, and the lowest number of victims being South Asian individuals [@moreau_wang_2022]. Seeing that Canada is one of the most diverse countries in the world, welcoming 405,999 permanent immigrants in 2021 [@government_of_canada_2022] and 130,125 refugees in 2020 [@macrotrends], these statistics concerning the increase of hate crimes pose a real and visceral threat to a large proportion of Canadian residents.
+Terrorists, distinct from ordinary criminals, are perceived to advocate for a political cause, often resorting to violent tactics to garner public attention and influence public opinion. Hence, within political science, there's a prevalent belief that the effectiveness of terrorism hinges on assumptions regarding its impact on public sentiment. Essentially, public opinion is deemed crucial in understanding the dynamics of terrorism. Yet, the extent and manner in which terrorism affects "ordinary citizens" remain ambiguous. Are citizens more inclined towards supporting authoritarian leaders in times of terror? Are they willing to sacrifice civil liberties and democratic values for enhanced security post-attack? Additionally, what or who exactly constitutes "terrorism"?
 
-There are many factors that contribute to the increase in hate crimes in Canada. However, with the rise of far-right discourse in the United States, anti-immigrant and anti-refugee rhetoric is becoming more prevalent in Canada. These negative attitudes and actions towards immigrants, refugees, and marginalized individuals can be the result of various structural and personal factors, including increased competition in the job and housing markets, resource scarcity, misguided beliefs about crime rates, illness, welfare dependency, and fears of losing national identity. Despite this, one factor that has received little attention until recently is the impact of mate competition in dating and marriage markets on anti-refugee sentiments. A [-@main_paper] paper by Dancygier, Egami, Jamal, and Rischke published in the American Journal of Political Science delves into this potentially important and often-overlooked fusion of social science with ecology.
-
-In studying the opinions of German males living in municipalities with excess male populations, they find that a portion of non-immigrant German men hold the belief that refugees pose a threat to their ability to pursue German women [@main_paper]. The study population is primarily non-immigrant German males in highly male populated municipalities. The estimand which we intend to replicate is the effect of mate competition on anti-refugee sentiments. Their finding suggests that hate crimes increase where non-immigrant German men are disadvantaged in their local dating markets [@main_paper]. Using ecological evidence and originally curated survey data, the paper concludes that competition in dating and marriage markets where men outnumber women increases anti-refugee sentiments and violence [@main_paper].
+Since the tragic events of September 11, 2001 (9/11), a substantial body of literature has emerged addressing these inquiries, yielding varied conclusions. While some scholars express concern that public reactions to terrorism jeopardize democracy, others argue that such responses are limited or transient, and sometimes even absent. However, these studies often explore diverse outcomes, nations, and terrorist threats using a range of methodologies. Consequently, there's a lack of systematic scrutiny regarding how the public's response to terrorism has been studied, resulting in limited understanding of this field's key characteristics and how they influence conclusions.
 
 Our paper will follow a reproduction of Dancygier, Egami, Jamal, and Rischke's findings and apply a Canadian-facing lens to discuss its implications on local Canadian populations and increased anti-refugee/ immigrant sentiments and violence. Our paper seeks to replicate their two following research claims, (1) Non-immigrant German men who live in municipalities with excess male populations are more likely to perceive refugees as threats and (2) Non-immigrant German men who perceive mate competition are more likely to support violence as the only means to gain the attention of German politicians. Our reproduction was conducted using the statistical programming language R [@citeR]. To further enable our analysis we employed the use of the following packages: readr [@readr], here [@here], readstata13 [@readstata13], MASS [@MASS], sandwich [@sandwich], lmtest [@lmtest], dplyr [@dplyr], tidyverse [@tidyverse], jtools [@jtools], huxtable [@huxtable], list [@list], knitr [@knitr] and kableExtra [@kableExtra].
 
@@ -71,82 +69,54 @@ We begin our paper with a discussion of the data source, the methodologies emplo
 
 ## Source
 
-The paper used for replication is from the American Journal of Political Science which follows a discussion on the correlation of perceived mate competition and its contributions to anti-refugee sentiments and higher crime rates in Germany [@main_paper]. Our reproduction seeks to address two findings made from the original paper and apply a Canadian facing lens. 
+In this paper we aim to replicate part of the results from the "How Terrorism Does (and Does Not) Affect Citizens’ Political Attitudes: A Meta-Analysis." In the original paper, the author Godefroidt explored the correlation between terrorism and outgroup hostility and conservatism. Furthermore, the author also included more complicated models and even an shinny app for interactive viewing. Due to various restraints, we are going the test the major finding of the original paper.
 
-Their two claims are as follows: (1) Are non-immigrant German men who live in municipalities with excess male populations more likely to perceive refugees as threats? (2) Are non-immigrant German men who perceive mate competition more likely to support violence as the only means to gain the attention of German politicians? 
-
+In summary, the major claims(also what we are gong to replicate ) of the original paper are:
+1.To what extend do terrorism arose public sentiment towards outgroup hostility, and a conservative shift. 
+2.To what extend do the last claim hold, if being placed across different contexts.How such differences in observed effect sizes explained by additional moderators?
 
 ## Methodology
 
-This paper will replicate the survey data that was originally collected for the [-@main_paper] paper by Dancygier, Egami, Jamal, and Rischkes, as previously mentioned. Using the online survey platform "Respondi", they conduct 4 waves of surveys which spanned from September 2016 to December 2017 [@main_paper]. The researchers suggest that the anonymity provided by the online survey platform resulted in respondents answering more truthfully. [@main_paper]. To mitigate potential biases, the researchers employed list experiments in Waves 1 and 2, and in Wave 2, they randomly assigned 50% of the sample to either a control or treatment group. The treatment group was exposed to statements concerning their agreement with using violence against refugees as a means to get the attention of German politicians. However, no evidence was found to suggest that respondents were concealing their support for hate crimes when comparing the means of the control and treatment groups [@main_paper].
+The original paper obtained its data from database that contains 12333 records. The data was collected throug three steps, electronic search, screening related paper, and public survey. After the filtering, 10,391 records were included for further reviewing. In the [figure 1], the author used a flow chart to illustrate the collecting and cleaning process. The collected data from six sources ranging from 'web of science,' to 'personal contact.' After preliminary filtering, additional 9444 records were removed due to the nature of these information are news articles and policy briefing. The inclusion of these information may ditch the reliability of the analysis. Eventually 241 pieces were retained. They were then used for data processing, a total of 1733 total associations were generated. 
 
 ## Features
 
-The original survey data assessed participants on 53 variables, being representative of gender, age and state. The range of recorded age data from the survey occurs from 19-89 years old. Age was then categorized by group which is as follows: 18-29, 30-39, 30-49, 50-59, and 60 and older. Both male and female participants took part in the survey, but females were only involved in Waves 2 and 4 of surveys. The survey was distributed across 16 German states. Our reproduction, however, included removing variables that were not utilized in our final reproduction analysis and included only the necessary Waves 2 and 4. As a part of our reproduction, we also simplified the names of variables to make them easier to work with. From the original survey data, each variable correlates with a survey question asked to participants. To discuss the variables used in our reproduction we have grouped them by category way and have listed each variable below. Some survey questions are presented, and have been reworded slightly for consistency and clarity.
+Those associations or processed data are stored in the file metaanalysis-data.xlsx. It contains 76 column and 1733 observations. A randomized selection of manuscripts (±15% of the total sample) was used to pilot the code book and make any necessary revisions. The columns can be divided into fifth major data categories. The first part of the variables are identity information of the data such as the author name, year of the study, the sample size and the general population. The second part is the political tendency and people's ethnicity with variables ranging from the percentage of people identifying as a liberal and mean to the white-muslims percentage. The third portion records the detail of each terrorist attack, including the type, date, casualties. The forth part records a series of political attitudes. For example, nationalism and institutional trust, socio-economic conservatism, support for policies that pertains an outgroup. The last part lists the analysis technical data that will be used in meta-analysis code such as Fisher's Z correlation, Regression and so on. From the original survey data, each variable correlates with a survey question asked to participants. In our reproduction, we excluded data that being used for figure3 and figure4 the moderator test. We also made some minor changes and removed insignificant data for clearer replication and viewing. 
 
-[Socio-demographics]{.underline}
+In order to better present our replication of the results, The following are measurments of public political opinions provided by the author. They are classfied into 4 categories given in the orignal paper. We selected some important measures 
 
--   Age Group
--   Gender
--   State
--   German Citizen
--   Marital Status
--   Relationship status, single
--   Religious Affiliation
--   Education
--   Occupation
--   Income
--   Household Size
--   Subjective Social Status
--   Excess males: The proportion of males to females by states by dividing the number of women by men aged 14 and 44 for each municipality 
--   Politics: left and right-leaning
--   Politics: affiliated parties
+[Objective exposure]{.underline}
 
-[Mate Competition: using a scale (1-4) to indicate agreement or disagreement]{.underline}
+-   Pre postattack measures
+-   Days between an act of violence and survey day
+-   Newspaper vignette about an act of violence
+-   News clip about an act of violence
 
--   The influx of male refugees make it difficult for non-immigrant German men to find female partners
+[Self-reported exposre]{.underline}
 
-[Job Competition: using a scale of agree or disagree]{.underline}
+-   Direct exposure to terrorism
+-   Indirect exposure via friends and family
+-   Indirect exposure via media reports
 
--   The inflow of young male refugees makes it more difficult for young non-immigrant German men to find work/ jobs
+[Cognitions]{.underline}
 
-[Life Satisfaction: scale of 0-10]{.underline}
+-   Self-reported concern/worry for an attack on the nation
+-   Self-reported concern/worry to become a victim of terrorism
+-   Self-reported concern/worry for an attack on the nation
+-   Manipulated vignette or writing task about the threat of terrorism (rather than about a specific act of violence)
+-   Manipulated percentage of the threat of terrorism
 
--   Rank your satisfaction with life
+[Emotion]{.underline}
 
-[Encountering Refugees]{.underline}
+-   Anger/outrage
+-   Fear/anxiety
+-   Sadness
+-   General negative emotion
 
--   How many KM is the closest refugee reception center from your home?
--   How many refugees do you believe have settled in your municipality in the last year?
--   In the last month, how many refugees have you encountered in the following locations? (on the street, on public transport or in parks, in stores, in refugee reception centres or hostels, school, work)
+# Statistical Analysis
 
-[Attitudes Toward Refugees (national and local scale): using a scale of agree or disagree]{.underline}
+In this paper we will replicate figure 2 and table2 of the orginal paper. Fortunately, the author has already compressed all the analysis into one coding file. We selected the corresponding part for each illustration. In terms of the analysis method, Pearson's correlation coefficient is used. According to the orignal paper, the manuscripts of the data they collected used various statistical method. For comparison purposes, each association is converted into a Pearson's correlation coefficient with the sampling variance. The author stressed that to "meaningfully compare and pool effect sizes, all correlations must also reflect the relation between terrorism and sociopolitical attitudes in the same direction."
 
--   Violence is sometimes the only means that citizens have to get the attention of German politicians 
--   Attitudes towards Muslims
--   Hostility against refugees is justified
--   Politicians should condemn attacks against refugees
--   Racist violence is defensible if it leads to fewer refugees settling in a town
--   Attacks against refugee homes are sometimes necessary to make garner the attention of politicians
--   Refugees are integrating well into Germany
--   German refugees should be entitled to German citizenship
--   The number of refugees should be reduced
--   Refugees are receiving more than non-immigrant Germans
--   Refugees should give up their culture to adopt that of Germany
--   Refugees are good for the economy
--   Refugees increase crime
--   Increased refugees increase the risk of terrorism
--   Additional refugees in your town will increase the influence of Islam (local)
--   Additional refugees in your town will be a challenge for local schools (local)
--   Additional refugees in your town will increase competition for housing (local)
--   Additional refugees in your town will change the way of life in your town (local)
-
-[Operational category]{.underline}
-
--   Experiment lists
--   Treatment lists
--   Outcome lists
--   Waves: out of 4
 
 # Results
 
@@ -157,20 +127,28 @@ The original survey data assessed participants on 53 variables, being representa
 #| message: false
 #| warning: false
 
-rm(list=ls())
-setwd("/cloud/project/raw/data") #set your directory
-options("scipen"=100, "digits"=8) #set digits
-getwd()
 
-ipak <- function(pkg){  new.pkg <- pkg[!(pkg %in% installed.packages()[, "Package"])]
-if(length(new.pkg)) install.packages(new.pkg, dependencies = TRUE)
-sapply(pkg, require, character.only = TRUE)
-}
 
-packages <- c("readxl", "haven", "psych", "dplyr", "DescTools", "broom", "cowplot",
-              "pwr", "esc", "metaSEM", "metafor", "metaviz", "PerformanceAnalytics", 
-              "ggplot2", "ggpubr", "wesanderson", "stringr", "dotwhisker") 
-ipak(packages)
+library(readxl)
+library(haven)
+library(psych)
+library(dplyr)
+library(DescTools)
+library(broom)
+library(cowplot)
+library(pwr)
+library(esc)
+library(metaSEM)
+library(metafor)
+library(metaviz)
+library(PerformanceAnalytics)
+library(ggplot2)
+library(ggpubr)
+library(wesanderson)
+library(stringr)
+library(dotwhisker)
+
+
 
 dat <- read_excel("/cloud/project/raw/data/02-metaanalysis-data.xlsx", sheet = "Data", 
                   col_names = TRUE, skip = 3)
@@ -178,7 +156,7 @@ dat <- read_excel("/cloud/project/raw/data/02-metaanalysis-data.xlsx", sheet = "
 ### dataframe of studies
 dat_studies <- dat[c(1:87)] #studies.
 dat_studies <- group_by(dat_studies, ID_RS) %>% slice(1)
-sum(dat_studies$ESS, na.rm = TRUE) #number of unique respondents
+#sum(dat_studies$ESS, na.rm = TRUE) #number of unique respondents
 
 ### dataframe of reports
 dat_reports <- dat[c(1:87)] #reports/publications.
@@ -186,11 +164,11 @@ dat_reports <- group_by(dat_reports, ID_R) %>% slice(1)
 
 
 ### set wished layout settings
-mytheme <- theme(plot.title = element_text(face = "bold", size = (22), colour = "black"), 
-                 axis.text = element_text(size = (18), colour = "black"),
+mytheme <- theme(plot.title = element_text(face = "bold", size = (13), colour = "black"), 
+                 axis.text = element_text(size = (6), colour = "black"),
                  axis.ticks.length = unit(0.5, "cm"),
-                 axis.title.y = element_text(size = (22), colour = "black"),
-                 axis.title.x = element_text(size = (22), colour = "white"))
+                 axis.title.y = element_text(size = (6), colour = "black"),
+                 axis.title.x = element_text(size = (6), colour = "white"))
 
 
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ # 
@@ -198,7 +176,7 @@ mytheme <- theme(plot.title = element_text(face = "bold", size = (22), colour = 
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ # 
 
 ## mean ES's per report (reported in footnote 6)
-format(round(psych::describe(aggregate(Correlation ~ ID_R, data = dat, FUN = length)),3), nsmall=3)
+#format(round(psych::describe(aggregate(Correlation ~ ID_R, data = dat, FUN = length)),3), #nsmall=3)
 
 StudyYear <- ggplot(dat_studies, aes(x=StudyYear)) + 
   geom_histogram(binwidth=1,
@@ -212,18 +190,20 @@ StudyYear <- StudyYear + geom_vline(xintercept=2004, linetype="dashed", size = 1
 StudyYear <- StudyYear + geom_vline(xintercept=2015, linetype="dashed", size = 1) #add ISIS line
 StudyYear <- StudyYear + geom_label(data = dat_studies, 
                                     aes(x=2001, y=27, label = "9/11"),
-                                    size=8) #add 9/11 label
+                                    size=4) #add 9/11 label
 StudyYear <- StudyYear + geom_label(data = dat_studies, 
                                     aes(x=2007, y=35, label = "Madrid & \n Israel-Palestine"),
-                                    size=6) #add label
+                                    size=2) #add label
 StudyYear <- StudyYear + geom_label(data = dat_studies, 
                                     aes(x=2014, y=44, label = "IS Attacks"),
-                                    size=8) #add ISIS label
+                                    size=2) #add ISIS label
 StudyYear <- StudyYear + mytheme
+
+
 
 # year of publication
 
-describe(dat_reports$Year) 
+#describe(dat_reports$Year) 
 # Figure 2B
 PubYear <- ggplot(dat_reports, aes(x=Year)) + 
   geom_histogram(binwidth=1, 
@@ -236,17 +216,17 @@ PubYear <- PubYear + geom_vline(xintercept=2001, linetype="dashed", size = 1) #a
 PubYear <- PubYear + geom_vline(xintercept=2015, linetype="dashed", size = 1) #add ISIS France line
 PubYear <- PubYear + geom_label(data = dat_reports,
                                 aes(x=2001, y=27, label = "9/11"),
-                                size=8) #add 9/11 label
+                                size=2) #add 9/11 label
 PubYear <- PubYear + geom_label(data = dat_reports, 
                                 aes(x=2014, y=44, label = "IS Attacks"),
-                                size=8) #add ISIS label
+                                size=2) #add ISIS label
 PubYear <- PubYear + mytheme
 
 
 ####### Terrorism measures, incl. cognitive and affective reactions ######
 
 # IV measurements used 
-summary(as.factor(dat$IV_Code))
+
 
 #wrangling
 dat$TerrorMeasure[dat$IV_Code==1] <- "Acts of violence"
@@ -266,11 +246,11 @@ dat$TerrorMeasure[dat$IV_Code==14] <- "Other"
 dat$TerrorMeasure[dat$IV_Code==15] <- "Other"
 dat$TerrorMeasure[dat$IV_Code==16] <- "Other"
 
-dat$TerrorMeasure <- as.factor(dat$TerrorMeasure)
-table(dat$TerrorMeasure)
-prop.table(table(dat$TerrorMeasure))
-table(dat$ExactAttack) #which attacks are studied?
-prop.table(table(dat$ExactAttack)) #which attacks are studied?
+#dat$TerrorMeasure <- as.factor(dat$TerrorMeasure)
+
+
+
+
 
 #visualization: Figure 2C
 tmdat <- data.frame(prop.table(table(dat$TerrorMeasure)))
@@ -287,7 +267,7 @@ TerrorMeasures <- TerrorMeasures + mytheme
 
 
 # type of terrorism
-summary(as.factor(dat$Type))
+
 
 #wrangling
 dat$TerrorType[dat$Type==0] <- "No ideology"
@@ -297,9 +277,9 @@ dat$TerrorType[dat$Type==3] <- "Other"
 dat$TerrorType[dat$Type==4] <- "Other"
 dat$TerrorType[dat$Type==5] <- "State terror"
 dat$TerrorType[dat$Type==6] <- "Other"
-dat$TerrorType <- as.factor(dat$TerrorType)
-summary(dat$TerrorType)
-prop.table(table(dat$TerrorType))
+#dat$TerrorType <- as.factor(dat$TerrorType)
+
+
 
 #visualization: Figure 2D
 ttdat <- data.frame(prop.table(table(dat$TerrorType)))
@@ -315,14 +295,16 @@ TerrorType <- TerrorType + mytheme
 
 
 
-jpeg("Figures/Fig2.jpeg", width = 15, height = 16, units = 'in', res = 300)
 ggarrange(StudyYear, PubYear, 
           TerrorMeasures, TerrorType,
           labels = c("(A)", "(B)", "(C)", "(D)"),
-          font.label = list(size = 22, color = "black"),
+          font.label = list(size = 10, color = "black"),
+          widths = 10,
+          heights = 10,
           ncol = 2, nrow = 2) #arrange all plots
-dev.off() #safe picture in high resolution.
+
 ```
+
 
 As depicted in @fig-collection(A) and (B), scholarly interest in exploring the link between terrorism and public attitudes notably began following the 9/11 attacks, and received further impetus following the 2015–16 Islamic State (IS) attacks. Put differently, the figures imply that this research domain is significantly influenced by specific events.
 
@@ -332,8 +314,30 @@ Moreover, from 1985 to 2020, researchers have employed diverse methodologies to 
 The most frequently studied acts of violence are—perhaps unsurprisingly—9/11, the Israeli-Palestinian conflict, and the 2015 series of IS attacks in Paris. Consequently, regarding the ideology behind the violence (@fig-collection(D)), the vast majority of effect sizes quantify the effects of or relationship with Islamist terrorism (1,064 data points, 61%), following by no ideology terrorism, whereas the share of information on how the public reacts to extreme-right terror is remarkably low (35 data points, 2%).
 
 
+
+
 Table 1 demonstrates that...
 
+```{r}
+#| label: table
+#| tbl-cap: "0000000000000000000"
+#| echo: false
+#| message: false
+#| warning: false
+
+library(knitr)
+library(kableExtra)
+library(dplyr)
+
+knitr::kable(
+  tibble(OutcomeType = c("Outgroup hostility","Conservative shift","Rally effects"),
+         k = c(645,728,360),
+         j = c(126,144,72),
+         Zr = c(0.126,0.132,0.090),
+         LBCI = c("[0.094;0.159]","[0.108;0.156]","[0.055;0.127]")
+  )
+)
+```
 
 
 
