renew the idea of conclusion

--- a/outputs/paper/paper.qmd
+++ b/outputs/paper/paper.qmd
@@ -61,7 +61,11 @@ Terrorists, distinct from ordinary criminals, are perceived to advocate for a po
 
 Since the tragic events of September 11, 2001 (9/11), a substantial body of literature has emerged addressing these inquiries, yielding varied conclusions. While some scholars express concern that public reactions to terrorism jeopardize democracy, others argue that such responses are limited or transient, and sometimes even absent. However, these studies often explore diverse outcomes, nations, and terrorist threats using a range of methodologies. Consequently, there's a lack of systematic scrutiny regarding how the public's response to terrorism has been studied, resulting in limited understanding of this field's key characteristics and how they influence conclusions.
 
-Our paper will follow a reproduction of Dancygier, Egami, Jamal, and Rischke's findings and apply a Canadian-facing lens to discuss its implications on local Canadian populations and increased anti-refugee/ immigrant sentiments and violence. Our paper seeks to replicate their two following research claims, (1) Non-immigrant German men who live in municipalities with excess male populations are more likely to perceive refugees as threats and (2) Non-immigrant German men who perceive mate competition are more likely to support violence as the only means to gain the attention of German politicians. Our reproduction was conducted using the statistical programming language R [@citeR]. To further enable our analysis we employed the use of the following packages: readr [@readr], here [@here], readstata13 [@readstata13], MASS [@MASS], sandwich [@sandwich], lmtest [@lmtest], dplyr [@dplyr], tidyverse [@tidyverse], jtools [@jtools], huxtable [@huxtable], list [@list], knitr [@knitr] and kableExtra [@kableExtra].
+A [-@main_paper] paper by Amélie Godefroidt from Norwegian University of Science and Technology published in the American Journal of Political Science delves into the moderator analyses, in order to understand how contextual factors influence the relationship between terrorism and political attitudes.   The study discusses an extended model for analyzing the relationship between terrorism and political attitudes, incorporating characteristics of manuscripts and effect sizes as moderators.               
+
+The study examines data from various sources, and details the characteristics of studies in the field, including the types of terrorism studied, geographical focus, and methodological approaches. It notes gaps in longitudinal studies, the dominance of convenience samples, and the focus on majority group perspectives. The study finds that terrorism is associated with increased outgroup hostility, political conservatism, and rally-'round-the-flag responses, though the effects are relatively small. Although the discussion section reflects on the findings, the limitations of the existing literature still exist, such as the predominant focus on Islamist terrorism and the limited geographical scope. It calls for a more nuanced understanding of public responses to terrorism, considering the potential long-term consequences.
+
+Our paper will follow a reproduction of Amélie Godefroidt's implications on the relationship between terrorism and political attitudes. Our paper seeks to replicate their two following research claims, (1) Non-immigrant German men who live in municipalities with excess male populations are more likely to perceive refugees as threats and (2) Non-immigrant German men who perceive mate competition are more likely to support violence as the only means to gain the attention of German politicians. Our reproduction was conducted using the statistical programming language R [@citeR]. To further enable our analysis we employed the use of the following packages: readr [@readr], here [@here], readstata13 [@readstata13], MASS [@MASS], sandwich [@sandwich], lmtest [@lmtest], dplyr [@dplyr], tidyverse [@tidyverse], jtools [@jtools], huxtable [@huxtable], list [@list], knitr [@knitr] and kableExtra [@kableExtra].
 
 We begin our paper with a discussion of the data source, the methodologies employed in the original paper and a review of the variables used for our reproduction. We will then conduct a reproduction of select results to verify their findings and improve upon their accessibility. Our paper will conclude with a discussion of our findings where we conduct a case study to apply our findings to Alberta, Canada's only Province with a greater population of males, a discussion of ethical biases, limitations and a push for future research.
 
@@ -374,23 +378,19 @@ Based on these statistics, we believe that Alberta may experience a similar effe
 
 ## Ethical Implications
 
-In their paper, Dancygier, Egami, Jamal, and Rischke examine the ethical implication of using experimental methodologies to investigate their research topic. By using descriptive data in the form of surveys they are able to investigate the opinions of non-immigrant German males and their perception of mate competition and its translation to anti-refugee violence. By avoiding experimental trials, they were able to explore their topic without provoking anti-refugee sentiment [@main_paper]. While conducting experimental trials on this topic of research is considered unethical, surveys and questionnaires may have a tendency to give respondents the impression that their opinions are commonly shared or even accurate. By being presented with a platform to express their perception of mate competition and if they agree that violence towards refugees is the only way to garner the attention of German politicians, respondents may feel that their opinions are incorrectly justified. This then has the potential to translate to violence towards German refugees.
+In their paper, studying terrorism and political attitudes [@main_paper] raises significant ethical considerations due to the potential impact on individuals and communities. For instance, examining public responses to terrorism may inadvertently contribute to the stigmatization of certain groups, particularly when findings are not adequately contextualized or interpreted. Moreover, researchers must ensure the well-being and rights of participants by obtaining informed consent and protecting their confidentiality. For example, studies employing self-report measures to assess exposure to terrorism should carefully consider the potential psychological distress participants may experiensce when recalling traumatic events [@main_paper]. Additionally, researchers must navigate the sensitive nature of studying terrorism across diverse cultural contexts, being mindful of cultural differences in understanding and interpreting acts of violence.
 
 ## Accounting for Bias
 
-Ethical implications and biases arise naturally when collecting quantitative and qualitative data. In their paper, Dancygier, Egami, Jamal, and Rischke use online survey platforms to assess if Germans living in areas with greater populations of men who experience turmoil in the mating market are more likely to perceive competition between themselves and refugees, moreover, does this ideology predict hate crime support [@main_paper]. The authors attempted to address ethical concerns and statistical biases by utilizing control groups and replicating their study with different samples and polling firms. However, one potential bias that is challenging to control for is the presence of sampling bias [@main_paper]. Sampling bias occurs when participants in a study are not representative of the estimand or the ideal population of interest. One method to control for this bias is simple random sampling, where participants are chosen by chance. Meaning that every individual in the population has an equal chance of being selected. However, in their study, they were unable to utilize simple random sampling. Instead attempted to make their survey results representative by conducting 4 waves of surveys meant to be representative of age, gender and geographical region [@main_paper]. Despite their effort, their survey results may not be entirely representative as individuals who have a strong interest in the subject matter are more likely to participate, meaning they do not reflect the views of all non-immigrant German males [@main_paper].
+Bias can manifest in various stages of the research process, impacting the validity and reliability of findings. To mitigate bias, researchers should employ rigorous methodologies and transparent reporting practices. For example, when selecting participants, researchers should strive for representative samples to minimize selection bias. Moreover, controlling for confounding variables, such as political ideology or prior exposure to terrorism, helps ensure that observed associations are not spurious. Additionally, researchers should be transparent about potential sources of bias in their data analysis methods, such as the exclusion of certain demographic groups or the use of subjective coding criteria. By acknowledging and addressing potential biases, researchers can enhance the credibility and robustness of their findings.
 
 ## Limitations
 
-Being a reproduction, much of our analysis was limited to the original survey circumstances captured in [@main_paper]. Despite the survey being long, it can not be considered to be comprehensive. This prevented us from exploring other relationships in the data. For example, in this German context, it would have been interesting to look into sentiments toward the treatment of communities experiencing genocide during the history of World War 2. Our connection of findings to the Albertan context was also limited by this cultural and geographical separation from our data.
-
-Due to the heteronormative nature of this study's data, our analysis was also not able to be fully representative of the German population as [@main_paper]'s authors described. While this is not to be surprised from an ecological context of mating behaviour, perhaps gay men would have been found to experience anti-refugee sentiment as well as an extension of the mate competition argument.
-
-There were also limitations associated with missing and limited data in our set. For example, in our analysis depicted in @fig-excess, fewer than 300 observations were represented in the oldest age group, which these authors doubted was enough for a meaningful evaluation.
+Despite its contributions, the article acknowledges several limitations that warrant consideration. For instance, the predominance of studies focused on Islamist terrorism in Western contexts limits the generalizability of findings to other types of terrorism and cultural contexts. This bias may stem from the availability of data or the framing of terrorism within public discourse. Moreover, the reliance on cross-sectional designs and self-report measures introduces potential biases, such as recall bias or social desirability bias. Additionally, the limited representation of studies from regions most affected by terrorism, such as Afghanistan or Syria, hinders the comprehensive understanding of public responses to terrorism. These limitations underscore the need for future research to address these gaps and provide a more nuanced understanding of the phenomena under study.
 
 ## Future Research
 
-As suggested in their original paper, Dancygier, Egami, Jamal, and Rischke call for future research to investigate how their findings apply to less ethnically distinct groups, with less aggressive media attention and under non-heteronormative roles [@main_paper]. They further call for tests in ethnonational countries and in regions where females overpopulate males to see if their findings apply to women [@main_paper]. As Global migration and refuge continue to increase, we anticipate that this field of study will become increasingly significant. It is thus crucial to expand on their findings to assess how they apply in varying nations. This is in hopes to create policy changes and account for preventative measures to avoid increased anti-refugee sentiments and hate crimes caused by sex-driven competition. We further hope for this field of research to be applied under less heteronormative circumstances and work to account for queer-identifying individuals.
+Moving forward, future research should prioritize addressing the identified limitations and advancing knowledge in the field. For example, comparative studies across different types of terrorism and ideological motivations can elucidate the differential impact on political attitudes and behaviors. Longitudinal studies are also essential for capturing the dynamic nature of public responses to terrorism over time. Moreover, qualitative research methods, such as interviews or focus groups, can provide insights into the underlying mechanisms and individual experiences of terrorism. Additionally, exploring the role of contextual factors, such as media framing or political discourse, can enrich our understanding of the complex interplay between terrorism and political attitudes. By pursuing these avenues of research, scholars can contribute to a more comprehensive understanding of the phenomena while upholding ethical standards and methodological rigor.
 
 \clearpage
 
