--- a/outputs/paper/references.bib
+++ b/outputs/paper/references.bib
@@ -33,15 +33,14 @@
    
    
 @Article{main_paper, 
-  title = {Hate Crimes and Gender Imbalances: Fears Over Mate Competition and Violence Against Refugees}, 
-  volume = {66}, 
-  number = {2}, 
+  title = {How Terrorism Does (and Does Not) Affect Citizens’ Political Attitudes: A Meta-Analysis}, 
+  volume = {67}, 
+  number = {1}, 
   journal = {American Journal of Political Science}, 
-  author = {Dancygier, Rafaela and Egami, Naoki and Jamal, Amaney and Rischke, Ramona}, 
-  year = {2021}, 
-  month = {Mar}, 
-  pages = {501–515},
-  DOI = {10.1111/ajps.12595}, 
+  author = {Godefroidt, Amélie}, 
+  year = {2023}, 
+  pages = {22–38},
+  DOI = {10.1111/ajps.12692}, 
  
   } 
   
